added anotation ideas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,9 @@ project(
 # generate compile_compands for clangd
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(srcfiles main.c lexer.c hashmap.c tokens.c log_impl.c stringstruct.c)
+set(srcfiles main.c lexer.c hashmap.c tokens.c log_impl.c stringstruct.c external/sds.c)
 
 add_executable(ccope ${srcfiles})
 
-target_include_directories(ccope PRIVATE string/)
+target_include_directories(ccope PRIVATE string/ external/)
 target_compile_options(ccope PRIVATE -Wall -g)
